--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     environment {
         AWS_ACCESS_KEY_ID = credentials("AWS_ACCESS_KEY_ID")
         AWS_SECRET_ACCESS_KEY = credentials("AWS_SECRET_ACCESS_KEY")
-        region = "us-east-1"
+        AWS_DEFAULT_REGION = "us-east-1"
 
     }
 
@@ -48,7 +48,18 @@ pipeline {
                 }
             }
         }
+        stage('Deploying Nginx Application'){
+            steps{
+                script{
+                    dir('EKS/ConfFiles')
+                    sh 'aws eks update-kubeconfig --name my-eks-cluster'
+                    sh 'kubectl apply -f deployment.yaml'
+                    sh 'kubectl apply -f service.yaml'
+                }
+            }
+        }
         
+
 
     }
 }
